overflow correct

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,7 +23,7 @@ body {
 	overflow-x: hidden;
 }
 .sticky-body {
-	overflow-y: hidden;
+	overflow: hidden;
 }
 
 .header {
